Fix: Css issues on mobile phones

--- a/index.css
+++ b/index.css
@@ -42,7 +42,7 @@ button {
     border-radius: 5px;
     border-color: goldenrod;
     background-color: #ECD991;
-    font-size: 0.5rem;
+    font-size: 1rem;
     font-family: Luminari, fantasy;
 }
 .nameForm{
